--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
         <div id="post">
             <h1>Este es el titulo atractivo e interesante del post</h1>
             <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
+            <p><img src="./imagenes/sukuna.jpg" alt="" width="100%"></p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci sint nostrum rerum architecto mollitia, magni neque vitae earum eaque nemo. Praesentium dolorem, ratione veritatis blanditiis commodi fugit porro harum quisquam.</p>
             <p>sucribete y dale like</p>
         </div>
